# git-ai

./: .gitignore  .gitmessage  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  _typos.toml  cog.toml  flake.nix  justfile  prompt.md  test_hooks.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
config/: default_config.yaml
docs/: caching.md  configuration.md  context-system.md  context-types.md
src/: cli.rs  config.rs  cursor_agent.rs  main.rs
src/cli/: args.rs  mod.rs
src/commands/: commit.rs  config.rs  ignore.rs  init.rs  merge.rs  mod.rs  pr.rs
src/context/: cache.rs  file_hash.rs  mod.rs  types.rs
src/context/providers/: agent.rs  documentation.rs  git.rs  interaction.rs  mod.rs  project.rs  repository.rs
src/prompts/: commit.rs  merge.rs  mod.rs  pr.rs
